--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
             />
           </picture>
           <div>
-            <p>
+            <!-- <p>
               --------------------------------------------------------------------------------------------------------------------------
-            </p>
+            </p> -->
             <p>
               レベルの高い食事会やデートでは、欠かせないのがワインの存在です。そんな場面で、スマートにワインを頼んでいる人をかっこいいなと思ったことありますよね？
             </p>
@@ -46,7 +46,7 @@
                 >そんな、ワインとの距離を一気に変えたのはHOMEWiNEでした。</span
               >
             </p>
-            <p class="c-section-break">◇　◇　◇　◇　◇　◇</p>
+            <!-- <p class="c-section-break">◇　◇　◇　◇　◇　◇</p> -->
           </div>
         </div>
 
@@ -87,7 +87,7 @@
               >そんなあなたのために生まれたのがHOMEWiNEです。</span
             >
           </p>
-          <p class="c-section-break">◇　◇　◇　◇　◇　◇</p>
+          <!-- <p class="c-section-break">◇　◇　◇　◇　◇　◇</p> -->
         </section>
 
         <section>
