--- a/src/index.html
+++ b/src/index.html
@@ -225,7 +225,7 @@
               >
             </p>
           </div>
-          <p class="c-section-break">◇　◇　◇　◇　◇　◇</p>
+          <!-- <p class="c-section-break">◇　◇　◇　◇　◇　◇</p> -->
         </section>
         <section>
           <div>
