--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <h1>
             【二代目バチェラーも実践】<span>デートのレベルを上げるワイン学</span>とは！？
           </h1>
-          <p class="u-text-center">[PR]HOMEWiNE</p>
+          <p class="u-text-right">[PR]HOMEWiNE</p>
           <picture>
             <source srcset="./images/image1.webp" />
             <img
@@ -75,7 +75,7 @@
             <picture>
               <img
                 class="lazyload"
-                data-src="./images/gif3.gif"
+                data-src="./images/gif2.gif"
                 width="708"
                 height="398"
               />
