--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             【二代目バチェラーも実践】<span>デートのレベルを上げるワイン学</span>とは！？
           </h1>
           <p class="u-text-right">[PR]HOMEWiNE</p>
-          <picture>
+          <picture class="u-mb--1">
             <source srcset="./images/image1.webp" />
             <img
               class="lazyload"
@@ -31,116 +31,97 @@
               height="472"
             />
           </picture>
-          <div>
-            <!-- <p>
-              --------------------------------------------------------------------------------------------------------------------------
-            </p> -->
-            <p>
-              レベルの高い食事会やデートでは、欠かせないのがワインの存在です。そんな場面で、スマートにワインを頼んでいる人をかっこいいなと思ったことありますよね？
-            </p>
-          </div>
-          <div>
-            <p>
-              でも、実際にワインを学ぶのはハードルが高いと感じるのではないでしょうか。<span
-                class="u-highlight"
-                >そんな、ワインとの距離を一気に変えたのはHOMEWiNEでした。</span
-              >
-            </p>
-            <!-- <p class="c-section-break">◇　◇　◇　◇　◇　◇</p> -->
-          </div>
+          <p class="u-mb--3">
+            レベルの高い食事会やデートでは、欠かせないのがワインの存在です。そんな場面で、スマートにワインを頼んでいる人をかっこいいなと思ったことありますよね？
+          </p>
+          <p class="u-mb--3">
+            でも、実際にワインを学ぶのはハードルが高いと感じるのではないでしょうか。<span
+              class="u-highlight"
+              >そんな、ワインとの距離を一気に変えたのはHOMEWiNEでした。</span
+            >
+          </p>
         </div>
 
         <section>
-          <h2>デートは着席してからが本当の勝負</h2>
-          <div>
-            <p>
-              評価の高いレストランを予約するのは、ただスタート地点に立っただけです。その先に行くためには、店の席に着席してからが本当の意味でのスタートなのです。
-            </p>
-            <picture>
-              <img
-                class="lazyload"
-                data-src="./images/gif1.gif"
-                width="708"
-                height="398"
-              />
-            </picture>
-          </div>
-          <div>
-            <p>
-              もし、メイン料理やデザート、相手の気分に合わせて、ワインリストから選べたら・・・デートは盛り上がり、<span
-                class="u-highlight"
-                >2件目にスムーズに移る強力な一手になることでしょう！</span
-              >
-            </p>
-            <picture>
-              <img
-                class="lazyload"
-                data-src="./images/gif2.gif"
-                width="708"
-                height="398"
-              />
-            </picture>
-          </div>
-          <p>
+          <h2 class="u-mb--2">デートは着席してからが本当の勝負</h2>
+          <p class="u-mb--3">
+            評価の高いレストランを予約するのは、ただスタート地点に立っただけです。その先に行くためには、店の席に着席してからが本当の意味でのスタートなのです。
+          </p>
+          <picture class="u-mb--1">
+            <img
+              class="lazyload"
+              data-src="./images/gif1.gif"
+              width="708"
+              height="398"
+            />
+          </picture>
+          <p class="u-mb--3">
+            もし、メイン料理やデザート、相手の気分に合わせて、ワインリストから選べたら・・・デートは盛り上がり、<span
+              class="u-highlight"
+              >2件目にスムーズに移る強力な一手になることでしょう！</span
+            >
+          </p>
+          <picture class="u-mb--1">
+            <img
+              class="lazyload"
+              data-src="./images/gif2.gif"
+              width="708"
+              height="398"
+            />
+          </picture>
+          <p class="u-mb--3">
             ワインは価格ではなく、同伴者をエスコートするための最強の武器だとは知りつつも、手軽に学ぶにはハードルが高すぎます。もっと手軽に、楽しく学びたい！<span
               class="u-highlight"
               >そんなあなたのために生まれたのがHOMEWiNEです。</span
             >
           </p>
-          <!-- <p class="c-section-break">◇　◇　◇　◇　◇　◇</p> -->
         </section>
 
         <section>
-          <h2>新しいワインスクール</h2>
-          <div>
-            <p>
-              <span class="u-highlight"
-                >敷居の高いワインスクールに通う時代はもう終わりです。</span
-              >HOMEWiNEでは自宅で手軽に楽しみながらワインを学ぶことができます！
-            </p>
-            <picture>
-              <img
-                class="lazyload"
-                data-src="./images/gif3.gif"
-                width="708"
-                height="398"
-              />
-            </picture>
-          </div>
-          <div>
-            <p>
-              HOMEWiNEを監修しているソムリエ佐々木は、年間顧客数日本一を誇る人気講師でもあります。
-            </p>
-            <picture>
-              <source data-srcset="./images/image2.webp" />
-              <img
-                class="lazyload"
-                data-src="./images/image2.jpg"
-                width="708"
-                height="396"
-              />
-            </picture>
-          </div>
-          <div>
-            <p>
-              ワインの本質的な部分である歴史的背景や産地の気候などを楽しく学ぶことができます。これならデートでの会話も盛り上がること間違いなし！
-            </p>
-            <picture>
-              <img
-                class="lazyload"
-                src="./images/gif4.gif"
-                width="708"
-                height="398"
-              />
-            </picture>
-          </div>
+          <h2 class="u-mb--2">新しいワインスクール</h2>
+          <p class="u-mb--3">
+            <span class="u-highlight"
+              >敷居の高いワインスクールに通う時代はもう終わりです。</span
+            >HOMEWiNEでは自宅で手軽に楽しみながらワインを学ぶことができます！
+          </p>
+          <picture class="u-mb--1">
+            <img
+              class="lazyload"
+              data-src="./images/gif3.gif"
+              width="708"
+              height="398"
+            />
+          </picture>
+          <p class="u-mb--3">
+            HOMEWiNEを監修しているソムリエ佐々木は、年間顧客数日本一を誇る人気講師でもあります。
+          </p>
+          <picture class="u-mb--1">
+            <source data-srcset="./images/image2.webp" />
+            <img
+              class="lazyload"
+              data-src="./images/image2.jpg"
+              width="708"
+              height="396"
+            />
+          </picture>
+          <p class="u-mb--3">
+            ワインの本質的な部分である歴史的背景や産地の気候などを楽しく学ぶことができます。これならデートでの会話も盛り上がること間違いなし！
+          </p>
+          <picture class="u-mb--1">
+            <img
+              class="lazyload"
+              src="./images/gif4.gif"
+              width="708"
+              height="398"
+            />
+          </picture>
           <p>
             <span class="u-highlight"
               >ワインを飲む前に再生し、飲みながら再生するだけで、ワインを深く理解し、生涯にわたる知識となることでしょう。</span
             >
           </p>
           <button
-            class="c-btn"
+            class="c-btn u-mb--3"
             onclick="location.href='https://shop.homewine.jp/lp?u=Article01'"
           >
             <picture>
@@ -155,122 +136,105 @@
         </section>
 
         <section>
-          <h2>本当のハイスペックとは、相手を楽しませること</h2>
-
-          <div>
-            <p>
-              二代目バチェラーの小柳津林太郎さんもHOMEWiNE体験者の一人です。
-            </p>
-            <picture>
-              <source data-srcset="./images/image4.webp" />
-              <img
-                class="lazyload"
-                data-src="./images/image4.jpg"
-                width="708"
-                height="402"
-              />
-            </picture>
-            <p>
-              ワインスクールに申し込んだり、自分で勉強しようとしたこともあったけど、フルボトル（ワイン一本）だと飲み切れないことがしばしばあるそう。
-            </p>
-          </div>
-
-          <div>
-            <picture>
-              <source data-srcset="./images/image5.webp" />
-              <img
-                class="lazyload"
-                data-src="./images/image5.jpg"
-                width="708"
-                height="402"
-              />
-            </picture>
-            <p>
-              <span class="u-highlight"
-                >HOMEWiNEでは１本あたり100mlの専用瓶に入れて届けているので、ワインの風味を最大限に味わうことができます。</span
-              >
-            </p>
-          </div>
-          <div>
-            <picture>
-              <source data-srcset="./images/image6.webp" />
-              <img
-                class="lazyload"
-                data-src="./images/image6.jpg"
-                width="708"
-                height="402"
-              />
-            </picture>
-            <p>
-              HOMEWiNEがお届けする解説動画は１本あたり約１０分なので、<span
-                class="u-highlight"
-                >ワインスクールの講座に行く時間の取れない忙しいビジネスマンにはピッタリです。</span
-              >
-            </p>
-          </div>
-          <div>
-            <picture>
-              <source data-srcset="./images/image7.webp" />
-              <img
-                class="lazyload"
-                data-src="./images/image7.jpg"
-                width="708"
-                height="402"
-              />
-            </picture>
-            <p>
-              HOMEWiNE体験前までは、正直金額でワインを選んでいました。<span
-                class="u-highlight"
-                >ワインを深く理解することで、コンパやデートのレベルが上がっても、ワイン選びで迷うことはなくなりました。</span
-              >
-            </p>
-          </div>
-          <!-- <p class="c-section-break">◇　◇　◇　◇　◇　◇</p> -->
+          <h2 class="u-mb--2">本当のハイスペックとは、相手を楽しませること</h2>
+          <p class="u-mb--3">
+            二代目バチェラーの小柳津林太郎さんもHOMEWiNE体験者の一人です。
+          </p>
+          <picture class="u-mb--1">
+            <source data-srcset="./images/image4.webp" />
+            <img
+              class="lazyload"
+              data-src="./images/image4.jpg"
+              width="708"
+              height="402"
+            />
+          </picture>
+          <p class="u-mb--3">
+            ワインスクールに申し込んだり、自分で勉強しようとしたこともあったけど、フルボトル（ワイン一本）だと飲み切れないことがしばしばあるそう。
+          </p>
+          <picture class="u-mb--1">
+            <source data-srcset="./images/image5.webp" />
+            <img
+              class="lazyload"
+              data-src="./images/image5.jpg"
+              width="708"
+              height="402"
+            />
+          </picture>
+          <p class="u-mb--3">
+            <span class="u-highlight"
+              >HOMEWiNEでは１本あたり100mlの専用瓶に入れて届けているので、ワインの風味を最大限に味わうことができます。</span
+            >
+          </p>
+          <picture class="u-mb--1">
+            <source data-srcset="./images/image6.webp" />
+            <img
+              class="lazyload"
+              data-src="./images/image6.jpg"
+              width="708"
+              height="402"
+            />
+          </picture>
+          <p class="u-mb--3">
+            HOMEWiNEがお届けする解説動画は１本あたり約１０分なので、<span
+              class="u-highlight"
+              >ワインスクールの講座に行く時間の取れない忙しいビジネスマンにはピッタリです。</span
+            >
+          </p>
+          <picture class="u-mb--1">
+            <source data-srcset="./images/image7.webp" />
+            <img
+              class="lazyload"
+              data-src="./images/image7.jpg"
+              width="708"
+              height="402"
+            />
+          </picture>
+          <p class="u-mb--3">
+            HOMEWiNE体験前までは、正直金額でワインを選んでいました。<span
+              class="u-highlight"
+              >ワインを深く理解することで、コンパやデートのレベルが上がっても、ワイン選びで迷うことはなくなりました。</span
+            >
+          </p>
         </section>
         <section>
-          <div>
-            <picture>
-              <source data-srcset="./images/image8.webp" />
-              <img
-                class="lazyload"
-                data-src="./images/image8.jpg"
-                width="708"
-                height="402"
-              />
-            </picture>
-            <p>
-              ワインは食事会やデートだけでなく、ワンランク上でのビジネスシーンの会食でも不可欠な存在となります。
-            </p>
-          </div>
-          <div>
-            <picture>
-              <source data-srcset="./images/image9.webp" />
-              <img
-                class="lazyload"
-                data-src="./images/image9.jpg"
-                width="708"
-                height="560"
-              />
-            </picture>
-            <p>
-              女性をリードするだけでなく、一つ上のレベルのビジネスマンになるためにも、<span
-                class="u-highlight"
-                >ここぞという場面で迷わなくなる一生モノのワインの知識を習得してみるのはいかがでしょうか。</span
-              >
-            </p>
-          </div>
-          <div>
-            <picture>
-              <source data-srcset="./images/image10.webp" />
-              <img
-                class="lazyload"
-                data-src="./images/image10.jpg"
-                width="708"
-                height="402"
-            /></picture>
-          </div>
+          <picture class="u-mb--1">
+            <source data-srcset="./images/image8.webp" />
+            <img
+              class="lazyload"
+              data-src="./images/image8.jpg"
+              width="708"
+              height="402"
+            />
+          </picture>
+          <p class="u-mb--3">
+            ワインは食事会やデートだけでなく、ワンランク上でのビジネスシーンの会食でも不可欠な存在となります。
+          </p>
+          <picture class="u-mb--1">
+            <source data-srcset="./images/image9.webp" />
+            <img
+              class="lazyload"
+              data-src="./images/image9.jpg"
+              width="708"
+              height="560"
+            />
+          </picture>
+          <p class="u-mb--3">
+            女性をリードするだけでなく、一つ上のレベルのビジネスマンになるためにも、<span
+              class="u-highlight"
+              >ここぞという場面で迷わなくなる一生モノのワインの知識を習得してみるのはいかがでしょうか。</span
+            >
+          </p>
+          <picture class="u-mb--1">
+            <source data-srcset="./images/image10.webp" />
+            <img
+              class="lazyload"
+              data-src="./images/image10.jpg"
+              width="708"
+              height="402"
+          /></picture>
           <button
-            class="c-btn"
+            class="c-btn u-mb--3"
             onclick="location.href='https://shop.homewine.jp/lp?u=Article01'"
           >
             <picture>
