--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <h1>
             【二代目バチェラーも実践】<span>デートのレベルを上げるワイン学</span>とは！？
           </h1>
-          <p class="u-text-right">[PR]HOMEWiNE</p>
+          <p class="u-text-right u-mb--3">[PR]HOMEWiNE</p>
           <picture class="u-mb--1">
             <source srcset="./images/image1.webp" />
             <img
