--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
       <article class="p-article">
         <div class="p-article__intro">
           <h1>
-            【二代目バチェラーも実践】<span>デートのレベルを上げるワイン学</span>とは！？
+            【二代目バチェラーも実践】<br class="u-sm-block" /><span
+              >デートのレベルを上げるワイン学</span
+            >とは！？
           </h1>
           <p class="u-text-right u-mb--3">[PR]HOMEWiNE</p>
           <picture class="u-mb--1">
