--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" sizes="16x16" href="./images/favicon.ico" />
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png" />
     <!-- google fonts -->
-    <title>Document</title>
+    <title>デートのレベルを上げるワイン学とは！？</title>
   </head>
   <body>
     <main class="u-container">
